# glbtest

./: Cargo.toml
assets/: material.glb
src/: main.rs
