[package]
name = "glb-test"
edition = "2021"

[dependencies.bevy]
version = "0.14.1"
features = [
	"bevy_color",
	"bevy_core_pipeline",
	"bevy_gltf",
	"bevy_pbr",
	"bevy_state",
	"bevy_render",
	"bevy_text",
	"bevy_ui",
	"bevy_winit",
	"default_font",
	"multi_threaded",
	"tonemapping_luts",
	"x11",
	"dynamic_linking",
]
